<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.InformationActivity" >

    <ImageView
        android:id="@+id/activation_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iniciar_logo_description"
        android:src="@drawable/ic_launcher" >
    </ImageView>

    <TextView
        android:id="@+id/activation_appname"
        style="@android:style/TextAppearance.Large"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/activation_logo"
        android:text="@string/app_name" >
    </TextView>

    <TextView
        android:id="@+id/activation_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activation_appname"
        android:layout_toRightOf="@id/activation_logo"
        android:text="@string/version_name" >
    </TextView>

    <Button
        android:id="@+id/activate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/activate_button"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/activate_button"
        android:layout_below="@id/activation_logo"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ProgressBar
                android:id="@+id/get_imei_progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/get_imei_progress_bar"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/activation_retrieve" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activation_data_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/activation_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:text="@string/activation_code_label" />

            <TextView
                android:id="@+id/activation_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activation_code_label"
                android:layout_centerHorizontal="true"
                android:text="@string/activation_number" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>