<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_solid_color_blue_gradient"
    android:keepScreenOn="true"
    tools:context=".ui.HotWordActivity">

    <ImageView
        android:id="@+id/civOlivia"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:src="@drawable/olivia_chatbot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClose" />


    <android.support.v4.widget.Space
        android:id="@+id/space"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/civOlivia"
        app:layout_constraintEnd_toEndOf="@id/civOlivia"
        app:layout_constraintStart_toStartOf="@id/civOlivia"
        app:layout_constraintTop_toTopOf="@+id/civOlivia" />

    <FrameLayout
        android:id="@+id/flOliviaText"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toTopOf="@id/space">


        <TextView
            android:id="@+id/tvOliviaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@drawable/speech_bubble"
            android:padding="16dp"
            android:paddingBottom="16dp"
            android:text="@string/hotword_text_one"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvOliviaTextMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/drawable_white_olivia_text_bg"
            android:padding="16dp"
            android:text="@string/hotword_text_two"
            android:textColor="@color/blue"
            android:textSize="14sp" />
    </FrameLayout>

    <pl.bclogic.pulsator4droid.library.PulsatorLayout
        android:id="@+id/pulsator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="3"
        app:layout_constraintBottom_toTopOf="@+id/tvFinalizer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flOliviaText"
        app:pulse_color="@color/blue_gradient_top_color"
        app:pulse_count="6"
        app:pulse_duration="5000"
        app:pulse_interpolator="Accelerate"
        app:pulse_repeat="0"
        app:pulse_startFromScratch="false">

        <ImageView
            android:id="@+id/ivPulsatorArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/image_description_android_phone"
            android:src="@drawable/ic_microphone_black_shape" />


    </pl.bclogic.pulsator4droid.library.PulsatorLayout>

    <TextView
        android:id="@+id/tvFinalizer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_fourty_dp"
        android:layout_marginEnd="@dimen/margin_fourty_dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/drwable_button_rounded_corner_bg"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/text_finalizer"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>